crates/weft-snapshots/tests/snapshots/react-tsx/example-switch.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-switch as react-tsx
---
export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

function _on(v: unknown): boolean {
  return v === "false" ? false : Boolean(v);
}

function _act(actions: WeftProps["actions"], event: WeftEvent): void {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

export default function WeftScreen({ data, actions, onChange }: WeftProps) {
  return (
    <main data-weft-id="root" aria-label="Notifications">
      <label>
        <input data-weft-id="push" type="checkbox" role="switch" aria-label="Push notifications" checked={_on(data?.pushEnabled)} onChange={(_e) => { onChange?.("$.pushEnabled", _e.currentTarget.checked); _act(actions, { id: "push", action: "settings.update" }); }} />
        <span aria-hidden="true">Push notifications</span>
      </label>
    </main>
  );
}
