crates/weft-snapshots/tests/snapshots/react-tsx/example-text.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-text as react-tsx
---
export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

function _text(v: unknown): string {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _squash(v: string): string {
  return v.trim().replace(/\s+/g, " ");
}

export default function WeftScreen({ data, actions, onChange }: WeftProps) {
  return (
    <main data-weft-id="root" aria-label="Status">
      <div data-weft-id="saved" data-tone="success">All changes saved.</div>
      <div data-weft-id="user">
        {!(_text(data?.user?.name).trim() === "") ? _squash(_text(data?.user?.name)) : ""}
      </div>
    </main>
  );
}
